--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ input::placeholder {
 }
 
 .bottom li {
+    font-size: 14px;
     padding: 20px 0;
     border-bottom: 1px solid black;
     margin: 0 30px;
